1. fix column-main overflow 2. remove tablet responsive layout

--- a/include/style/responsive.styl
+++ b/include/style/responsive.styl
@@ -23,6 +23,10 @@
             top: .75rem
             align-self: flex-start
 
+    .column-main
+        flex: 1
+        width: 0
+
 +mobile()
     .section
         padding: 1.5rem 1rem
